<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.cards.fragments.CardsFragment">

    <TextView
        android:id="@+id/top_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_card_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_card_details_is_never_stored"
        android:textColor="@color/tab_text_selected_color"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_info_txt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:gravity="fill"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/sub_info_txt" />

    <TextView
        android:id="@+id/et_expiry_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/expire_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/etCardNumber"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/et_expiry_date_txt"
        app:layout_constraintTop_toBottomOf="@id/et_expiry_date_txt">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_mm"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_yy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxLength="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_expiry_date_txt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/et_cvv_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/etCardNumber"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/etCardNumber"
            app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/tally_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cvv_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/et_cvv_txt"
        app:layout_constraintTop_toBottomOf="@id/et_expiry_date_txt">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_cvv"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/cvv"
            android:inputType="number"
            android:maxLength="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generate_qr_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:text="@string/generate_qr"
        app:layout_constraintTop_toBottomOf="@id/cvv_layout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/tally_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>